--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ extensions = [".module.scss", ".module.css"]
 site-pkg-dir = "pkg"
 
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
-style-file = "stylance/index.scss"
+style-file = "stylance/_index.scss"
 # Assets source dir. All files found here will be copied and synchronized to site-root.
 # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
 #
@@ -74,6 +74,7 @@ style-file = "stylance/index.scss"
 assets-dir = "public"
 
 # The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
+# if you get errors for port in use check using ``` sudo lsof -i :3000 ```
 site-addr = "127.0.0.1:3000"
 
 # The port to use for automatic reload monitoring
