--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,22 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-leptos = { version = "0.8.0" }
+leptos = { version = "0.8.6" }
 leptos_router = { version = "0.8.0" }
-axum = { version = "0.8.0", optional = true }
-console_error_panic_hook = { version = "0.1", optional = true }
-leptos_axum = { version = "0.8.0", optional = true }
 leptos_meta = { version = "0.8.0" }
-tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
-wasm-bindgen = { version = "=0.2.100", optional = true }
 stylance = "0.7.0"
+serde = "1.0.219"
+
+# Hydrate dependencies
+wasm-bindgen = { version = "=0.2.100", optional = true }
+console_error_panic_hook = { version = "0.1", optional = true }
+
+# Server Side dependencies
+tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
+axum = { version = "0.8.0", optional = true }
+rusqlite = { version = "0.37.0", optional = true }
+leptos_axum = { version = "0.8.0", optional = true }
+id3 = {version = "1.16.3", optional = true }
 
 [features]
 hydrate = [
@@ -27,6 +34,8 @@ ssr = [
     "dep:axum",
     "dep:tokio",
     "dep:leptos_axum",
+    "dep:rusqlite",
+    "dep:id3",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
