--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ axum = { version = "0.8.0", optional = true }
 rusqlite = { version = "0.37.0", optional = true }
 leptos_axum = { version = "0.8.0", optional = true }
 id3 = {version = "1.16.3", optional = true }
+tower-http = "0.6.6"
 
 [features]
 hydrate = [
