--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,9 @@ axum = { version = "0.8.0", optional = true }
 rusqlite = { version = "0.37.0", optional = true }
 leptos_axum = { version = "0.8.0", optional = true }
 id3 = {version = "1.16.3", optional = true }
+leptos-use = {version = "0.16.2", optional = true}
 tower-http = "0.6.6"
+leptos-struct-table = "0.15.0"
 
 [features]
 hydrate = [
@@ -40,6 +42,7 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "leptos-use/ssr"
 ]
 
 
