--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,8 @@ leptos_axum = { version = "0.8.0", optional = true }
 id3 = {version = "1.16.3", optional = true }
 leptos-use = {version = "0.16.2"}
 tower-http = "0.6.6"
-
+uuid = {version="1.18.1", features = ["v4", "std", "js"]}
+getrandom = { version = "0.3.3", features = ["wasm_js"] }
 [features]
 hydrate = [
     "leptos/hydrate",
