--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,9 @@ console_error_panic_hook = { version = "0.1", optional = true }
 
 # Server Side dependencies
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
-axum = { version = "0.8.0", optional = true }
-rusqlite = { version = "0.37.0", optional = true }
+axum = { version = "0.8.0", optional = true, features = ["macros"]}
+# rusqlite = { version = "0.37.0", optional = true }
+sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"], optional = true }
 leptos_axum = { version = "0.8.0", optional = true }
 id3 = {version = "1.16.3", optional = true }
 leptos-use = {version = "0.16.2"}
@@ -37,7 +38,8 @@ ssr = [
     "dep:axum",
     "dep:tokio",
     "dep:leptos_axum",
-    "dep:rusqlite",
+    "dep:sqlx",
+    # "dep:rusqlite",
     "dep:id3",
     "leptos/ssr",
     "leptos_meta/ssr",
