--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,18 @@ crate-type = ["cdylib", "rlib"]
 leptos = { version = "0.8.6" }
 leptos_router = { version = "0.8.0" }
 leptos_meta = { version = "0.8.0" }
-stylance = "0.7.0"
-serde = "1.0.219"
+stylance = "0.7.1"
+serde = "1.0.221"
 
 # Hydrate dependencies
-wasm-bindgen = { version = "=0.2.100", optional = true }
+wasm-bindgen = { version = "0.2.101", optional = true }
 console_error_panic_hook = { version = "0.1", optional = true }
 
 # Server Side dependencies
-tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
+tokio = { version = "1.47.1", features = ["rt-multi-thread"], optional = true }
 axum = { version = "0.8.0", optional = true, features = ["macros"]}
-# rusqlite = { version = "0.37.0", optional = true }
 sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"], optional = true }
-leptos_axum = { version = "0.8.0", optional = true }
+leptos_axum = { version = "0.8.6", optional = true }
 id3 = {version = "1.16.3", optional = true }
 leptos-use = {version = "0.16.2"}
 tower-http = "0.6.6"
