Moved sqlite database

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # Compile time settings are in fish script (watch.fish)
 
 # sqlx uses DATABASE_URL for compile time validation of query!() macros
-DATABASE_URL="sqlite://music.db"
+DATABASE_URL="sqlite://sqlite/music.db"
